--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-spring-bottom-sheet": "^3.4.1",
+    "react-tabs": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
