--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.13.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
