feat: Upgrade to 309-dimensional recommendation model
- Switch to prediction_service_309d for 309d feature support
- Add Phase 3 Colab training guide and documentation
- Update DB models with age, gender, text_embedding columns
- Add scaler_params and vectorizer for 309d model
- Update .gitignore to exclude large training data files

Note: Large CSV files (259MB+) excluded from Git
- Training data remains local-only
- Model files (.pth) hosted on HuggingFace

--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,13 @@ scripts/
 # Data files
 data/raw/*
 data/processed/*
+data/training/*.csv
+data/training/*.pkl
 !data/raw/.gitkeep
 !data/processed/.gitkeep
+
+# Embeddings (large files)
+*.npy
 
 # Models
 models/*.pth
