--- a/backend_web/requirements.txt
+++ b/backend_web/requirements.txt
@@ -1,14 +1,12 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
-httpx==0.25.2
+psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-pydantic==2.5.0
-pydantic-settings==2.1.0
-psycopg2-binary==2.9.9
+pydantic[email]==2.5.0
 python-dotenv==1.0.0
-numpy==1.24.3
-email-validator==2.1.0
-bcrypt==4.0.1
+httpx==0.25.2
+authlib==1.2.1
+itsdangerous==2.1.2
