--- a/backend_model/requirements.txt
+++ b/backend_model/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.24.0
 torch==2.1.1
 transformers==4.36.0
 faiss-cpu==1.7.4
-numpy>=2.0.0
+numpy==1.26.4
 pydantic==2.5.0
 tqdm==4.66.1
 scikit-learn==1.3.2
